 + Added /mcscoreboard keep, to keep the scoreboard up forever
 + Added Rainbow Mode to scoreboards
 + Added new /mccooldowns command to show all ability cooldowns
 + Commands may now both print text and display a scoreboard
 + Killing a custom entity will automatically add it to the custom entity config file with default values.
 = Fixed bug which allowed players to bypass fishing's exploit prevention
 = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
 = Fixed bug with "Skull Splitter" not finding the locale string
 = Fixed issue where locale strings could cause the scoreboard header to be longer than 16 characters.
 = Fixed a bug with "Beast Lore" when the entity had no owner but was tamed.
 = Fixed a bug where AbilityDeactivateEvent would throw an error if the player logged out before his ability ran out.
 = Fixed a bug where LevelUpEvent would be called for an offline player.
 = Fixed a bug where teleport location was never reset if warmup was set to 0 for "Chimaera Wing".
 = Fixed a bug where the "Dodge" DamageModifier wasn't being read from advanced.yml
 = Fixed a bug where squid were not awarding XP.
 = Fixed a bug where Combat XP was granted within 5 seconds for respawned players
 = Fixed a bug where wrong feedback messages were being send when using a command on an offline player
 = Fixed a bug where players were able to gain Herbalism XP in mine carts, even though Prevent_AFK_Leveling was enabled
 = Fixed a bug where players would get hit by fireworks if they leveled up while in a boat
 ! Changed Fishing "Treasure Hunter" and "Magic Hunter" drop percentages
 ! Changed format of mod config files. (blocks.yml, tools.yml, armor.yml and entities.yml) **YOU WILL NEED TO UPDATE YOUR FILE TO THE NEW FORMAT**
 ! Changed format of treasures.yml. **YOU WILL NEED TO UPDATE YOUR FILE TO THE NEW FORMAT**
 ! Changed format of repair.vanilla.yml. **YOU WILL NEED TO UPDATE YOUR FILE TO THE NEW FORMAT**