@@ -1,20 +1,18 @@
 package com.gmail.nossr50.skills.archery;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.UUID;
 
-import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.inventory.ItemStack;
 
-import com.gmail.nossr50.mcMMO;
 import com.gmail.nossr50.config.AdvancedConfig;
 import com.gmail.nossr50.util.Misc;
 
 public class Archery {
-    private static List<TrackedEntity> trackedEntities = new ArrayList<TrackedEntity>();
+    private static Map<UUID, TrackedEntity> trackedEntities = new HashMap<UUID, TrackedEntity>();
 
     public static int    retrieveMaxBonusLevel = AdvancedConfig.getInstance().getRetrieveMaxBonusLevel();
     public static double retrieveMaxChance     = AdvancedConfig.getInstance().getRetrieveChanceMax();
@@ -31,11 +29,11 @@ public class Archery {
     public static final double DISTANCE_XP_MULTIPLIER = 0.025;
 
     protected static void incrementTrackerValue(LivingEntity livingEntity) {
-        for (TrackedEntity trackedEntity : trackedEntities) {
-            if (trackedEntity.getLivingEntity().getEntityId() == livingEntity.getEntityId()) {
-                trackedEntity.incrementArrowCount();
-                return;
-            }
+        TrackedEntity trackedEntity = trackedEntities.get(livingEntity.getUniqueId());
+
+        if (trackedEntity != null) {
+            trackedEntity.incrementArrowCount();
+            return;
         }
 
         addToTracker(livingEntity); // If the entity isn't tracked yet
@@ -45,11 +43,11 @@ public class Archery {
         TrackedEntity trackedEntity = new TrackedEntity(livingEntity);
 
         trackedEntity.incrementArrowCount();
-        trackedEntities.add(trackedEntity);
+        trackedEntities.put(livingEntity.getUniqueId(), trackedEntity);
     }
 
-    protected static void removeFromTracker(TrackedEntity trackedEntity) {
-        trackedEntities.remove(trackedEntity);
+    protected static void removeFromTracker(UUID id) {
+        trackedEntities.remove(id);
     }
 
     /**
@@ -58,24 +56,14 @@ public class Archery {
      * @param livingEntity The entity hit by the arrows
      */
     public static void arrowRetrievalCheck(LivingEntity livingEntity) {
-        for (Iterator<TrackedEntity> entityIterator = trackedEntities.iterator(); entityIterator.hasNext();) {
-            TrackedEntity trackedEntity = entityIterator.next();
+        UUID id = livingEntity.getUniqueId();
+        TrackedEntity trackedEntity = trackedEntities.get(id);
 
-            if (trackedEntity.getID() == livingEntity.getUniqueId()) {
-                Misc.dropItems(livingEntity.getLocation(), new ItemStack(Material.ARROW), trackedEntity.getArrowCount());
-                entityIterator.remove();
-                return;
-            }
+        if (trackedEntity == null) {
+            return;
         }
-    }
 
-    public static Location stringToLocation(String location) {
-        String[] values = location.split(",");
-
-        return new Location(mcMMO.p.getServer().getWorld(values[0]), Double.parseDouble(values[1]), Double.parseDouble(values[2]), Double.parseDouble(values[3]), Float.parseFloat(values[4]), Float.parseFloat(values[5]));
-    }
-
-    public static String locationToString(Location location) {
-        return location.getWorld().getName() + "," + location.getX() + "," + location.getY() + "," + location.getZ() + "," + location.getYaw() + "," + location.getPitch();
+        Misc.dropItems(livingEntity.getLocation(), new ItemStack(Material.ARROW), trackedEntity.getArrowCount());
+        removeFromTracker(id);
     }
 }
