@@ -18,7 +18,6 @@ import org.bukkit.event.entity.EntityDamageEvent.DamageCause;
 import org.bukkit.inventory.ItemStack;
 
 import com.gmail.nossr50.mcMMO;
-import com.gmail.nossr50.config.Config;
 import com.gmail.nossr50.config.experience.ExperienceConfig;
 import com.gmail.nossr50.datatypes.player.McMMOPlayer;
 import com.gmail.nossr50.datatypes.skills.SkillType;
@@ -167,18 +166,10 @@ public final class CombatUtils {
             }
         }
 
-        if (archeryManager.canSkillShot()) {
-            finalDamage += archeryManager.skillShot(target, initialDamage, arrow);
-        }
+        finalDamage += archeryManager.skillShot(target, initialDamage, arrow);
+        finalDamage += archeryManager.daze(target, arrow);
 
-        if (archeryManager.canDaze(target)) {
-            finalDamage += archeryManager.daze((Player) target, arrow);
-        }
-
-        if (!arrow.hasMetadata(mcMMO.infiniteArrowKey) && archeryManager.canTrackArrows()) {
-            archeryManager.trackArrows(target);
-        }
-
+        archeryManager.trackArrow(target, arrow);
         archeryManager.distanceXpBonus(target, arrow);
 
         event.setDamage(finalDamage);
